--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
    "main": "index.js",
    "type": "module",
    "dependencies": {
-      "ajv": "^8.12.0",
       "express": "^4.18.0",
-      "jsdom": "^21.0.0"
+      "jsdom": "^21.0.0",
+      "merger": "^0.1.0-beta.0"
    },
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
